--- a/requirements.txt
+++ b/requirements.txt
@@ -1,359 +1,8 @@
-﻿absl-py==2.1.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.5.0
-aiohttp==3.11.13
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-alembic==1.15.2
-altair==5.5.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.4.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asteroid-filterbanks==0.4.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==25.3.0
-audioread==3.0.1
-autobahn==24.4.2
-Automat==24.8.1
-babel==2.16.0
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-bidict==0.23.1
-bleach==6.1.0
-blinker==1.8.2
-cachetools==5.5.2
-cattrs==25.1.0
-certifi==2024.7.4
-cffi==1.16.0
-channels==4.2.2
-charset-normalizer==3.3.2
-click==8.2.0
-colorama==0.4.6
-colorlog==6.9.0
-colormath==3.0.0
-comm==0.2.2
-comtypes==1.4.10
-constantly==23.10.4
-contourpy==1.2.1
-cryptography==44.0.2
-cycler==0.12.1
-daphne==4.1.2
-debugpy==1.8.5
-decorator==5.1.1
-deep-translator==1.11.4
-defusedxml==0.7.1
-distro==1.9.0
 Django==5.1.7
-django-allauth==65.6.0
-django-cleanup==9.0.0
-django-htmx==1.23.0
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-docker==7.1.0
-docopt==0.6.2
-einops==0.8.1
-et-xmlfile==1.1.0
-executing==2.1.0
-faiss-cpu==1.11.0
-fastapi==0.115.12
-fastjsonschema==2.20.0
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-ffmpy==0.5.0
-filelock==3.18.0
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.1
-Flask-JWT-Extended==4.6.0
-Flask-SocketIO==5.5.1
-Flask-SQLAlchemy==3.1.1
-flatbuffers==25.2.10
-fonttools==4.53.1
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2025.3.2
-future==1.0.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-gradio==5.32.0
-gradio_client==1.10.2
-greenlet==3.0.3
-groovy==0.1.2
-grpcio==1.65.5
-h11==0.14.0
-h5py==3.11.0
-httpcore==1.0.5
-httpx==0.27.2
-huggingface-hub==0.30.2
-hyperlink==21.0.0
-HyperPyYAML==1.2.2
-idna==3.7
-imageio==2.36.0
-incremental==24.7.2
-ipykernel==6.29.5
-ipython==8.27.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-jedi==0.19.1
-jh2==5.0.9
-Jinja2==3.1.4
-jiter==0.9.0
-jiwer==3.1.0
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-julius==0.2.7
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keras==3.9.2
-kiwisolver==1.4.5
-langdetect==1.0.9
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-lightning==2.5.1.post0
-lightning-utilities==0.14.3
-llvmlite==0.44.0
-lxml==5.3.0
-Mako==1.3.10
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mediapipe==0.10.18
-mistune==3.0.2
-ml_dtypes==0.5.1
-more-itertools==10.7.0
-MouseInfo==0.1.3
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-namex==0.0.8
-narwhals==1.37.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-niquests==3.14.1
-nltk==3.9.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numba==0.61.0
-numpy==1.26.4
-ollama==0.5.1
-omegaconf==2.3.0
-openai==1.69.0
-openai-whisper==20240930
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-openmeteo_requests==1.5.0
-openmeteo_sdk==1.20.0
-openpyxl==3.1.5
-opt-einsum==3.3.0
-optree==0.12.1
-optuna==4.3.0
-orjson==3.10.18
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pillow==10.4.0
-platformdirs==4.2.2
-plotly==5.24.0
-pooch==1.8.2
-primePy==1.3
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-propcache==0.3.0
-protobuf==4.25.4
-psutil==6.0.0
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-py4j==0.10.9.7
-pyannote.audio==3.3.2
-pyannote.core==5.0.0
-pyannote.database==5.1.3
-pyannote.metrics==3.2.1
-pyannote.pipeline==3.0.1
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.9.1
-pydantic_core==2.23.3
-pydeck==0.9.1
-pydub==0.25.1
-pyfingerprint==1.5
-PyGetWindow==0.0.9
-Pygments==2.18.0
-PyJWT==2.9.0
-PyMsgBox==1.0.9
-PyMySQL==1.1.1
-pyOpenSSL==25.0.0
-pyparsing==3.1.2
-pyperclip==1.9.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-pyserial==3.5
-PySocks==1.7.1
-pyspark==3.5.3
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-engineio==4.12.1
-python-json-logger==2.0.7
-python-multipart==0.0.20
-python-pptx==1.0.2
-python-socketio==5.13.0
-pytorch-lightning==2.5.1.post0
-pytorch-metric-learning==2.8.1
-pyttsx3==2.98
-pytweening==1.2.0
-pytz==2024.1
-pywhatkit==5.4
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==26.2.0
 gunicorn
-qh3==1.5.2
-RapidFuzz==3.13.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-requests-cache==1.2.1
-retry-requests==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.20.0
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
-ruff==0.11.12
-safehttpx==0.1.6
-safetensors==0.5.3
-scikit-image==0.24.0
-scikit-learn==1.5.1
-scipy==1.14.0
-seaborn==0.13.2
-selenium==4.29.0
-semantic-version==2.10.0
-semver==3.0.4
-Send2Trash==1.8.3
-sentence-transformers==4.1.0
-sentencepiece==0.2.0
-service-identity==24.2.0
-setuptools==73.0.0
-shellingham==1.5.4
-shortuuid==1.0.13
-simple-websocket==1.1.0
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.1
-sonopy==0.1.2
-sortedcontainers==2.4.0
-sounddevice==0.4.7
-soundfile==0.13.1
-soupsieve==2.6
-soxr==0.5.0.post1
-speechbrain==1.0.3
-SpeechRecognition==3.14.2
-SQLAlchemy==2.0.32
-SQLAlchemy-Utils==0.41.2
-sqlparse==0.5.3
-srt==3.5.3
-stack-data==0.6.3
-starlette==0.46.2
-streamlit==1.44.1
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.0.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-tensorflow==2.19.0
-tensorflow-intel==2.16.1
-termcolor==2.4.0
-terminado==0.18.1
-tf_keras==2.19.0
-threadpoolctl==3.5.0
-tifffile==2024.9.20
-tiktoken==0.9.0
-tinycss2==1.3.0
-tokenizers==0.21.1
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.7.0+cu128
-torch-audiomentations==0.12.0
-torch_pitch_shift==1.2.5
-torchaudio==2.7.0
-torchmetrics==1.7.1
-torchvision==0.22.0+cu128
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.51.3
-trio==0.29.0
-trio-websocket==0.12.2
-twilio==9.4.6
-Twisted==24.11.0
-txaio==23.1.1
-typer==0.15.3
-types-python-dateutil==2.9.0.20240821
-typing_extensions==4.12.2
-tzdata==2024.1
-uri-template==1.3.0
-url-normalize==2.2.1
-urllib3==2.2.2
-urllib3-future==2.12.922
-uvicorn==0.30.6
-vader==0.0.3
-vosk==0.3.45
-waitress==3.0.0
-wassima==1.2.2
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.0.3
-wheel==0.44.0
-widgetsnbextension==4.0.13
-wikipedia==1.4.0
-wrapt==1.16.0
-wsproto==1.2.0
-xgboost==2.1.2
-XlsxWriter==3.2.2
-yarl==1.18.3
-zope.interface==7.2
+openmeteo-requests
+openmeteo-sdk
+requests-cache
+retry-requests
+numpy
+pandas
